--- a/index.html
+++ b/index.html
@@ -730,12 +730,13 @@
                         </font>
                     </b>
                     <div align="center">
-                        <table><tr>
-                            <td><img src="./Files/x6.png" title="isac" alt="isac" width="30%"
-                                style="display:block; margin:0 auto;"></td>
+                        <img src="./Files/x6.png" title="isac" alt="isac" width="45%"
+                                style="display:block; margin:0 auto;">
+                        <!-- <table><tr>
+                            <td></td>
                             <td><img src="./Files/x6_2.png" title="isac" alt="isac" width="60%"
                                 style="display:block; margin:0 auto;"></td>
-                            </tr></table>
+                            </tr></table> -->
                         
                     </div>
                     The Integrated Sensing and Communication (ISAC) is regarded as a promising paradigm shift for 6G
