--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
             <ul id="latestnews">
 
                 <li> <b>
+                        <font color="#FF0000">[2022.10]</font>
+                    </b> Dr. Gao was invited as the Associate Editor of IEEE Trans. Veh. Technol. (<a href=""
+                        target="_blank">
+                        <font>高镇入选重要期刊IEEE Trans. Veh. Technol. 编委</font>
+                    </a>)
+                </li>
+
+                <li> <b>
                         <font color="#FF0000">[2022.09]</font>
                     </b> Prof. Zhen Gao gave a speech on RISTA (<a href="https://www.bilibili.com/video/BV1F14y1e7Pm"
                         target="_blank">
@@ -731,17 +739,18 @@
                     </b>
                     <div align="center">
                         <img src="./Files/x6.png" title="isac" alt="isac" width="45%"
-                                style="display:block; margin:0 auto;">
+                            style="display:block; margin:0 auto;">
                         <!-- <table><tr>
                             <td></td>
                             <td><img src="./Files/x6_2.png" title="isac" alt="isac" width="60%"
                                 style="display:block; margin:0 auto;"></td>
                             </tr></table> -->
-                        
+
                     </div>
                     The Integrated Sensing and Communication (ISAC) is regarded as a promising paradigm shift for 6G
                     networks, aiming to develop novel hardware architectures and signal processing techniques for
-                    jointly enabling radar sensing and communications with scarce spectrum resource. In <font color="#FF0000">[R1]</font> we propose
+                    jointly enabling radar sensing and communications with scarce spectrum resource. In <font
+                        color="#FF0000">[R1]</font> we propose
                     to deploy a radar unit with widely spaced array (WSA) at the base station side, which cooperates
                     with the existing communication unit and thus realizes the radar functionality without complex
                     modification to the current cellular networks. The WSA enhances the angular resolution of radar
