--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
                 <h2><i class="fa fa-newspaper-o"></i>&nbsp;&nbsp;Latest News</h2>
             </A>
             <ul id="latestnews">
+                <li> <b>
+                        <font color="#FF0000">[2022.10]</font>
+                    </b> Paper of Xingyu Zhou was accepted by IEEE Trans. Wireless Commun. (
+                        <font>周星宇 论文被IEEE TWC (IF=8.346)期刊录用</font>)【基于OTFS-NOMA的低轨卫星物联网接入】
+                </li>
 
                 <li> <b>
                         <font color="#FF0000">[2022.10]</font>
@@ -843,6 +848,7 @@
                             accepted by IEEE Transactions on Wireless Communications, vol. 9, no. 18, pp. 17793-17807,
                             15 Sept.15, 2022.
                             [<a href="https://arxiv.org/pdf/2201.05766.pdf" target="_blank">arXiv</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/9898900/" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
 
