--- a/index.html
+++ b/index.html
@@ -845,8 +845,7 @@
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[42] Z. Gao, Z. Wan, D. Zheng, S. Tan, C. Masouros, D. W. K. Ng, and S. Chen, "Integrated
                             Sensing and Communication with mmWave Massive MIMO: A Compressed Sampling Perspective,"
-                            accepted by IEEE Transactions on Wireless Communications, vol. 9, no. 18, pp. 17793-17807,
-                            15 Sept.15, 2022.
+                            accepted by IEEE Transactions on Wireless Communications.
                             [<a href="https://arxiv.org/pdf/2201.05766.pdf" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/9898900/" target="_blank">IEEE URL</a>]
                         </span>
