--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <li> <b>
                         <font color="#FF0000">[2022.10]</font>
                     </b> Paper of Xingyu Zhou was accepted by IEEE Trans. Wireless Commun. (
-                        <font>周星宇 论文被IEEE TWC (IF=8.346)期刊录用</font>)【基于OTFS-NOMA的低轨卫星物联网接入】
+                    <font>周星宇 论文被IEEE TWC (IF=8.346)期刊录用</font>)【基于OTFS-NOMA的低轨卫星物联网接入】
                 </li>
 
                 <li> <b>
@@ -841,9 +841,37 @@
                 </b>: </p>
             <font size="3">
                 <ul>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[45] X. Zhou, K. Ying, <b>Z. Gao</b>, Y. Wu, Z. Xiao, S. Chatzinotas, J. Yuan, and B. Ottersten,
+                            “Active Terminal Identification, Channel Estimation, and Signal Detection for Grant-Free
+                            NOMA-OTFS in LEO Satellite Internet-of-Things”, accepted by IEEE Trans. Wireless Commun.,
+                            arXiv:2201.02084.
+                            [<a href="https://arxiv.org/pdf/2201.02084.pdf" target="_blank">arXiv</a>]
+                            <!-- [<a href="https://ieeexplore.ieee.org/document/9891773/" target="_blank">IEEE URL</a>] -->
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[44] H. Xiu, <b>Z. Gao</b>, et al., "Joint Activity Detection and Channel Estimation for Massive IoT Access Based on
+                            Millimeter-Wave/Terahertz Multi-Panel Massive MIMO," in IEEE Transactions on Vehicular
+                            Technology, 2022.
+                            <!-- [<a href="https://arxiv.org/pdf/2201.05766.pdf" target="_blank">arXiv</a>] -->
+                            [<a href="https://ieeexplore.ieee.org/document/9891773/" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[43] B. Zhu, E. Bedeer, H. H. Nguyen, R. Barton and <b>Z. Gao</b>, "UAV Trajectory Planning for
+                            AoI-Minimal Data Collection in UAV-Aided IoT Networks by Transformer," in IEEE Transactions
+                            on Wireless Communications, 2022, doi: 10.1109/TWC.2022.3204438.
+                            <!-- [<a href="https://arxiv.org/pdf/2201.05766.pdf" target="_blank">arXiv</a>] -->
+                            [<a href="https://ieeexplore.ieee.org/document/9892691" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
+
                     <!-- https://ieeexplore.ieee.org/abstract/document/9737291 -->
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[42] Z. Gao, Z. Wan, D. Zheng, S. Tan, C. Masouros, D. W. K. Ng, and S. Chen, "Integrated
+                        <span>[42] <b>Z. Gao</b>, Z. Wan, D. Zheng, S. Tan, C. Masouros, D. W. K. Ng, and S. Chen, "Integrated
                             Sensing and Communication with mmWave Massive MIMO: A Compressed Sampling Perspective,"
                             accepted by IEEE Transactions on Wireless Communications.
                             [<a href="https://arxiv.org/pdf/2201.05766.pdf" target="_blank">arXiv</a>]
@@ -852,7 +880,7 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[41] J. Huang, Y. Yang, Z. Gao, D. He and D. W. K. Ng, "Dynamic Spectrum Access for
+                        <span>[41] J. Huang, Y. Yang, <b>Z. Gao</b>, D. He and D. W. K. Ng, "Dynamic Spectrum Access for
                             D2D-Enabled Internet of Things: A Deep Reinforcement Learning Approach," in IEEE Internet of
                             Things Journal, vol. 9, no. 18, pp. 17793-17807, 15 Sept.15, 2022.
                             [<a href="https://ieeexplore.ieee.org/abstract/document/9737291" target="_blank">IEEE
