--- a/index.html
+++ b/index.html
@@ -841,6 +841,15 @@
                 </b>: </p>
             <font size="3">
                 <ul>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[46] H. Xiu, Z. Gao,
+                            et al., "Joint Activity Detection and Channel Estimation for Massive IoT Access Based on Millimeter-Wave/Terahertz Multi-Panel Massive MIMO," in IEEE Transactions on Vehicular Technology, 2022, doi: 10.1109/TVT.2022.3206492.
+                            <!-- [<a href="https://arxiv.org/pdf/2201.02084.pdf" target="_blank">arXiv</a>] -->
+                            [<a href="https://ieeexplore.ieee.org/document/9891773/" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
+
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[45] X. Zhou, K. Ying, <b>Z. Gao</b>, Y. Wu, Z. Xiao, S. Chatzinotas, J. Yuan, and B. Ottersten,
                             “Active Terminal Identification, Channel Estimation, and Signal Detection for Grant-Free
