--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
             </A>
             <ul id="latestnews">
                 <li> <b>
+                        <font color="#FF0000">[2022.11]</font>
+                    </b> Paper of Yang Wang was accepted by IEEE. Wireless Commun. (
+                    <font>王洋 论文被IEEE WCM (IF=12.77)期刊录用</font>)【基于AI的6G智能网络:从大规模MIMO到语义通信】
+                </li>
+
+                <li> <b>
                         <font color="#FF0000">[2022.10]</font>
                     </b> Paper of Xingyu Zhou was accepted by IEEE Trans. Wireless Commun. (
                     <font>周星宇 论文被IEEE TWC (IF=8.346)期刊录用</font>)【基于OTFS-NOMA的低轨卫星物联网接入】
@@ -844,14 +850,17 @@
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[46] H. Xiu, Z. Gao,
-                            et al., "Joint Activity Detection and Channel Estimation for Massive IoT Access Based on Millimeter-Wave/Terahertz Multi-Panel Massive MIMO," in IEEE Transactions on Vehicular Technology, 2022, doi: 10.1109/TVT.2022.3206492.
+                            et al., "Joint Activity Detection and Channel Estimation for Massive IoT Access Based on
+                            Millimeter-Wave/Terahertz Multi-Panel Massive MIMO," in IEEE Transactions on Vehicular
+                            Technology, 2022, doi: 10.1109/TVT.2022.3206492.
                             <!-- [<a href="https://arxiv.org/pdf/2201.02084.pdf" target="_blank">arXiv</a>] -->
                             [<a href="https://ieeexplore.ieee.org/document/9891773/" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[45] X. Zhou, K. Ying, <b>Z. Gao</b>, Y. Wu, Z. Xiao, S. Chatzinotas, J. Yuan, and B. Ottersten,
+                        <span>[45] X. Zhou, K. Ying, <b>Z. Gao</b>, Y. Wu, Z. Xiao, S. Chatzinotas, J. Yuan, and B.
+                            Ottersten,
                             “Active Terminal Identification, Channel Estimation, and Signal Detection for Grant-Free
                             NOMA-OTFS in LEO Satellite Internet-of-Things”, accepted by IEEE Trans. Wireless Commun.,
                             arXiv:2201.02084.
@@ -861,7 +870,8 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[44] H. Xiu, <b>Z. Gao</b>, et al., "Joint Activity Detection and Channel Estimation for Massive IoT Access Based on
+                        <span>[44] H. Xiu, <b>Z. Gao</b>, et al., "Joint Activity Detection and Channel Estimation for
+                            Massive IoT Access Based on
                             Millimeter-Wave/Terahertz Multi-Panel Massive MIMO," in IEEE Transactions on Vehicular
                             Technology, 2022.
                             <!-- [<a href="https://arxiv.org/pdf/2201.05766.pdf" target="_blank">arXiv</a>] -->
@@ -870,7 +880,8 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[43] B. Zhu, E. Bedeer, H. H. Nguyen, R. Barton and <b>Z. Gao</b>, "UAV Trajectory Planning for
+                        <span>[43] B. Zhu, E. Bedeer, H. H. Nguyen, R. Barton and <b>Z. Gao</b>, "UAV Trajectory
+                            Planning for
                             AoI-Minimal Data Collection in UAV-Aided IoT Networks by Transformer," in IEEE Transactions
                             on Wireless Communications, 2022, doi: 10.1109/TWC.2022.3204438.
                             <!-- [<a href="https://arxiv.org/pdf/2201.05766.pdf" target="_blank">arXiv</a>] -->
@@ -880,7 +891,8 @@
 
                     <!-- https://ieeexplore.ieee.org/abstract/document/9737291 -->
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[42] <b>Z. Gao</b>, Z. Wan, D. Zheng, S. Tan, C. Masouros, D. W. K. Ng, and S. Chen, "Integrated
+                        <span>[42] <b>Z. Gao</b>, Z. Wan, D. Zheng, S. Tan, C. Masouros, D. W. K. Ng, and S. Chen,
+                            "Integrated
                             Sensing and Communication with mmWave Massive MIMO: A Compressed Sampling Perspective,"
                             accepted by IEEE Transactions on Wireless Communications.
                             [<a href="https://arxiv.org/pdf/2201.05766.pdf" target="_blank">arXiv</a>]
