--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2022.11]</font>
+                    </b> Ph.D. student Li Qiao and M.S. student Yang Wang are awarded National Scholarship (
+                    <font>博士生乔力和硕士生王洋获得研究生国家奖学金</font>)
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2022.11]</font>
                     </b> Paper of Yang Wang was accepted by IEEE. Wireless Commun. (
                     <font>王洋 论文被IEEE WCM (IF=12.77)期刊录用</font>)【基于AI的6G智能网络:从大规模MIMO到语义通信】
                 </li>
@@ -174,43 +180,45 @@
                     </a>)
                 </li>
 
-                <li> <b>
-                        <font color="#FF0000">[2022.05]</font>
-                    </b>
-                    <font color="#FF0000">Invited Paper</font> of Xingyu Zhou was accepted by <b>Intelligent and
-                        Converged Networks</b>(
-                    <a href="" target="_blank">
-                        <font>周星宇特邀论文被ICN期刊录用</font>
-                    </a>)【智能透射表面辅助的免授权海量接入】
-                </li>
 
-                <li> <b>
-                        <font color="#FF0000">[2022.05]</font>
-                    </b> Paper of Ziwei Wan was accepted by <b>IEEE Network</b> (
-                    <a href="" target="_blank">
-                        <font>万子维 论文被IEEE Network (<b>IF=10.693</b>)期刊录用</font>
-                    </a>)
-                </li>
 
-                <li> <b>
-                        <font color="#FF0000">[2022.04]</font>
-                    </b> Dr. Zhen Gao is the recipient of Elsevier 2021 MOST Cited Chinese Researchers (
-                    <a href=" " target="_blank">
-                        <font>高镇 入选爱思唯尔2021中国高被引学者</font>
-                    </a>)
-                </li>
 
-                <li> <b>
-                        <font color="#FF0000">[2022.03]</font>
-                    </b> Zhuoran Li and Hongshan Liu were awarded Outstanding Communist Youth League Member and
-                    Outstanding Students of SIE (
-                    <a href=" " target="_blank">
-                        <font>李卓然，刘泓杉分别获优秀团员、致信精英表彰</font>
-                    </a>)
-                </li>
 
                 <details>
                     <summary>View More Earlier News</summary>
+                    <li> <b>
+                            <font color="#FF0000">[2022.05]</font>
+                        </b>
+                        <font color="#FF0000">Invited Paper</font> of Xingyu Zhou was accepted by <b>Intelligent and
+                            Converged Networks</b>(
+                        <a href="" target="_blank">
+                            <font>周星宇特邀论文被ICN期刊录用</font>
+                        </a>)【智能透射表面辅助的免授权海量接入】
+                    </li>
+                    <li> <b>
+                            <font color="#FF0000">[2022.05]</font>
+                        </b> Paper of Ziwei Wan was accepted by <b>IEEE Network</b> (
+                        <a href="" target="_blank">
+                            <font>万子维 论文被IEEE Network (<b>IF=10.693</b>)期刊录用</font>
+                        </a>)
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2022.04]</font>
+                        </b> Dr. Zhen Gao is the recipient of Elsevier 2021 MOST Cited Chinese Researchers (
+                        <a href=" " target="_blank">
+                            <font>高镇 入选爱思唯尔2021中国高被引学者</font>
+                        </a>)
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2022.03]</font>
+                        </b> Zhuoran Li and Hongshan Liu were awarded Outstanding Communist Youth League Member and
+                        Outstanding Students of SIE (
+                        <a href=" " target="_blank">
+                            <font>李卓然，刘泓杉分别获优秀团员、致信精英表彰</font>
+                        </a>)
+                    </li>
                     <li> <b>
                             <font color="#FF0000">[2022.02]</font>
                         </b> Paper of Minghui Wu was accepted by <b>IEEE Journal on Selected Areas in Communications</b>
