--- a/index.html
+++ b/index.html
@@ -82,8 +82,14 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2022.11]</font>
+                    </b> Paper of Minghui Wu was accepted by IEEE JSAC (
+                    <font>吴铭晖论文被IEEE JSAC (IF=13.081)期刊录用</font>)【基于AI的率分裂和Thz智能超表面传输】
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2022.11]</font>
                     </b> Ph.D. student Ke, Qiao, and Mei were awarded prestigious PhD Scholarship (
-                        <font>博士生柯玛龙、乔力、梅逸堃获得博士生特等奖学金</font>)
+                    <font>博士生柯玛龙、乔力、梅逸堃获得博士生特等奖学金</font>)
                 </li>
 
                 <li> <b>
