--- a/index.html
+++ b/index.html
@@ -847,7 +847,15 @@
             <font size="3">
                 <ul>
                     <p style="text-indent: -1.5rem;margin-left: 0rem;">
-                        <span>[1] <b>Zhen Gao</b>, Malong Ke, Li Qiao, and Yikun Mei, "Massive IoT Access for 6G",
+                        <span>[1] <b>高镇</b>, "大规模MIMO通信稀疏信号处理",
+                            北京理工大学出版社.
+                            <!-- [<a href="https://link.springer.com/book/10.1007/978-981-19-2704-1" target="_blank">Buy</a>] -->
+                            [<a href="https://item.jd.com/13533595.html" target="_blank">京东</a>]
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -1.5rem;margin-left: 0rem;">
+                        <span>[2] <b>Zhen Gao</b>, Malong Ke, Li Qiao, and Yikun Mei, "Massive IoT Access for 6G",
                             Springer Press.
                             [<a href="https://link.springer.com/book/10.1007/978-981-19-2704-1" target="_blank">Buy</a>]
                             [<a href="https://item.jd.com/10057073503285.html" target="_blank">京东</a>]
@@ -855,21 +863,21 @@
                     </p>
 
                     <p style="text-indent: -1.5rem;margin-left: 0rem;">
-                        <span>[2] <b>Zhen Gao</b>, Linglong Dai, Xinyu Gao, and Zhaocheng Wang, "Channel estimation in
+                        <span>[3] <b>Zhen Gao</b>, Linglong Dai, Xinyu Gao, and Zhaocheng Wang, "Channel estimation in
                             mmWave massive MIMO systems", Chapter 6 of book <i>MmWave Massive MIMO: A paradigm for
                                 5G</i>, Elsevier Press.
                         </span>
                     </p>
 
                     <p style="text-indent: -1.5rem;margin-left: 0rem;">
-                        <span>[3] <b>Zhen Gao</b>, Linglong Dai, Xinyu Gao, Muhammad Zeeshan Shakir, and Zhaocheng Wang,
+                        <span>[4] <b>Zhen Gao</b>, Linglong Dai, Xinyu Gao, Muhammad Zeeshan Shakir, and Zhaocheng Wang,
                             "Fronthaul design for mmWave massive MIMO HetNets", Chapter 12 of book <i>MmWave Massive
                                 MIMO: A paradigm for 5G</i>, Elsevier Press.
                         </span>
                     </p>
 
                     <p style="text-indent: -1.5rem;margin-left: 0rem;">
-                        <span>[4] Xinyu Gao, Linglong Dai, <b>Zhen Gao</b>, and Zhaocheng Wang, "Precoding for mmWave
+                        <span>[5] Xinyu Gao, Linglong Dai, <b>Zhen Gao</b>, and Zhaocheng Wang, "Precoding for mmWave
                             MIMO",
                             Chapter 5 of book <i>MmWave Massive MIMO: A paradigm for 5G</i>, Elsevier Press.
                         </span>
@@ -877,7 +885,7 @@
 
                     <p style="text-indent: -1.5rem;margin-left: 0rem;">
                         <span>
-                            [5] <font style="font-family:Microsoft YaHei">杨昉, 刘思聪, <b>高镇</b>. "<i>5G 移动通信空口新技术</i> ",
+                            [6] <font style="font-family:Microsoft YaHei">杨昉, 刘思聪, <b>高镇</b>. "<i>5G 移动通信空口新技术</i> ",
                                 电子工业出版社.</font>
                             [<a href="https://item.jd.com/12695491.html" target="_blank">Buy</a>]
                         </span>
