slides and video MA

--- a/index.html
+++ b/index.html
@@ -648,6 +648,27 @@
                     increase,
                     where a structured orthogonal matching pursuit algorithm is developed for detecting the active
                     devices and their data <font color="#FF0000">[R4]</font>.
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseFort">
+                                    <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to
+                                        unfold/fold video.</i>
+                                </a>&nbsp;&nbsp;[<a href="./Files/Sildes_MA1210.pdf" target="_blank">Slides</a>]
+                            </h4>
+                        </div>
+                        <div id="collapseFort" class="panel-collapse collapse">
+                            <div class="panel-body" style="position: relative; padding: 30% 45%;">
+                                <iframe
+                                    src="//player.bilibili.com/player.html?aid=348608297&bvid=BV12R4y1C721&cid=918781354&page=1&as_wide=1&high_quality=1&danmaku="
+                                    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
+                                    style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
+                                </iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <iframe src="//player.bilibili.com/player.html?aid=348608297&bvid=BV12R4y1C721&cid=918781354&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe> -->
+
                     <details>
                         <summary>Related Work</summary>
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
