--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
                                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseFort">
                                     <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to
                                         unfold/fold video.</i>
-                                </a>&nbsp;&nbsp;[<a href="./Files/Sildes_MA1210.pdf" target="_blank">Slides</a>]
+                                </a>&nbsp;&nbsp;[<a href="./Files/Slides_MA1210.pdf" target="_blank">Slides</a>]
                             </h4>
                         </div>
                         <div id="collapseFort" class="panel-collapse collapse">
