--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2022.12]</font>
+                    </b> Paper of Xingyu Zhou was accepted by IEEE Network (
+                    <font>周星宇论文被IEEE Network (IF=10.294)期刊录用</font>)【基于OTFS-NOMA的低轨卫星接入】
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2022.12]</font>
                     </b> Paper of Minghui Wu was accepted by IEEE JSAC (
                     <font>吴铭晖论文被IEEE JSAC (IF=13.081)期刊录用</font>)【基于AI的率分裂和Thz智能超表面传输】
                 </li>
