--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
                         </p>
 
                     </details>
-                    
+
                     <!-- <iframe src="//player.bilibili.com/player.html?aid=945952024&bvid=BV1pW4y1g75a&cid=914642317&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe> -->
                 </li>
 
@@ -939,6 +939,32 @@
                             [<a href="https://ieeexplore.ieee.org/document/9891773/" target="_blank">IEEE URL</a>]
                         </span>
                     </p> -->
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[48] Y. Wang, Z. Gao, D. Zheng, S. Chen, D. Gunduz, and H. V. Poor, "Transformer-Empowered
+                            6G Intelligent Networks: From Massive MIMO Processing to Semantic Communication," accepted
+                            by IEEE Wireless Communications.
+                            [<a href="https://arxiv.org/pdf/2205.03770.pdf" target="_blank">arXiv</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/9961131" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[47] Z. Gao, X. Zhou, J. Zhao, J. Li, C. Zhu, C. Hu, P. Xiao, S. Chatzinotas, D. W. K. Ng,
+                            B. Ottersten, "Grant-Free NOMA-OTFS Paradigm: Enabling Efficient Ubiquitous Access for LEO
+                            Satellite Internet-of-Things", accepted by IEEE Network, arXiv:2209.12159.
+                            [<a href="https://arxiv.org/abs/2209.12159" target="_blank">arXiv</a>]
+                            <!-- [<a href="https://ieeexplore.ieee.org/document/9891773/" target="_blank">IEEE URL</a>] -->
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[46] M. Wu, Z. Gao, Y. Huang, Z. Xiao, D. W. K. Ng, and Z. Zhang, "Deep Learning-Based
+                            Rate-Splitting Multiple Access for Reconfigurable Intelligent Surface-Aided Tera-Hertz
+                            Massive MIMO", accepted by IEEE Journal on Selected Areas in Communications
+                            [<a href="https://arxiv.org/abs/2209.08456" target="_blank">arXiv</a>]
+                            <!-- [<a href="https://ieeexplore.ieee.org/document/9891773/" target="_blank">IEEE URL</a>] -->
+                        </span>
+                    </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[45] X. Zhou, K. Ying, <b>Z. Gao</b>, Y. Wu, Z. Xiao, S. Chatzinotas, J. Yuan, and B.
