--- a/index.html
+++ b/index.html
@@ -940,6 +940,15 @@
                         </span>
                     </p> -->
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[49] J. Zhao, Y. Zhu, K. Cai, Z. Gao, Z. Han and L. Hanzo, "Multiple-Antenna Aided
+                            Aeronautical Communications in Air-Ground Integrated Networks: Channel Estimation, Reliable
+                            Transmission, and Multiple Access," in IEEE Wireless Communications
+                            [<a href="https://arxiv.org/abs/2301.06055" target="_blank">arXiv</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/10024899" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[48] Y. Wang, Z. Gao, D. Zheng, S. Chen, D. Gunduz, and H. V. Poor, "Transformer-Empowered
                             6G Intelligent Networks: From Massive MIMO Processing to Semantic Communication," accepted
                             by IEEE Wireless Communications.
