--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
                         </span>
                     </p> -->
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[49] J. Zhao, Y. Zhu, K. Cai, Z. Gao, Z. Han and L. Hanzo, "Multiple-Antenna Aided
+                        <span>[49] J. Zhao, Y. Zhu, K. Cai, <b>Z. Gao</b>, Z. Han and L. Hanzo, "Multiple-Antenna Aided
                             Aeronautical Communications in Air-Ground Integrated Networks: Channel Estimation, Reliable
                             Transmission, and Multiple Access," in IEEE Wireless Communications
                             [<a href="https://arxiv.org/abs/2301.06055" target="_blank">arXiv</a>]
@@ -949,7 +949,7 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[48] Y. Wang, Z. Gao, D. Zheng, S. Chen, D. Gunduz, and H. V. Poor, "Transformer-Empowered
+                        <span>[48] Y. Wang, <b>Z. Gao</b>, D. Zheng, S. Chen, D. Gunduz, and H. V. Poor, "Transformer-Empowered
                             6G Intelligent Networks: From Massive MIMO Processing to Semantic Communication," accepted
                             by IEEE Wireless Communications.
                             [<a href="https://arxiv.org/pdf/2205.03770.pdf" target="_blank">arXiv</a>]
@@ -958,7 +958,7 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[47] Z. Gao, X. Zhou, J. Zhao, J. Li, C. Zhu, C. Hu, P. Xiao, S. Chatzinotas, D. W. K. Ng,
+                        <span>[47] <b>Z. Gao</b>, X. Zhou, J. Zhao, J. Li, C. Zhu, C. Hu, P. Xiao, S. Chatzinotas, D. W. K. Ng,
                             B. Ottersten, "Grant-Free NOMA-OTFS Paradigm: Enabling Efficient Ubiquitous Access for LEO
                             Satellite Internet-of-Things", accepted by IEEE Network, arXiv:2209.12159.
                             [<a href="https://arxiv.org/abs/2209.12159" target="_blank">arXiv</a>]
@@ -967,7 +967,7 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[46] M. Wu, Z. Gao, Y. Huang, Z. Xiao, D. W. K. Ng, and Z. Zhang, "Deep Learning-Based
+                        <span>[46] M. Wu, <b>Z. Gao</b>, Y. Huang, Z. Xiao, D. W. K. Ng, and Z. Zhang, "Deep Learning-Based
                             Rate-Splitting Multiple Access for Reconfigurable Intelligent Surface-Aided Tera-Hertz
                             Massive MIMO", accepted by IEEE Journal on Selected Areas in Communications
                             [<a href="https://arxiv.org/abs/2209.08456" target="_blank">arXiv</a>]
