--- a/index.html
+++ b/index.html
@@ -142,26 +142,29 @@
                 <li> <b>
                         <font color="#FF0000">[2022.09]</font>
                     </b> One Paper was accepted by IEEE Trans. Vehicular Technology (
-                    <a href="" target="_blank">
-                        <font>IF = 6.239</font>
-                    </a>)【毫米波太赫兹MIMO超级上行接入】
+                        <font>IF = 6.239</font>)【毫米波太赫兹MIMO超级上行接入】
                 </li>
 
                 <li> <b>
                         <font color="#FF0000">[2022.09]</font>
                     </b> Paper of Ziwei Wan was accepted by IEEE Trans. Wireless Communications (
-                    <a href="" target="_blank">
-                        <font>万子维 论文被IEEE TWC (IF=8.346)期刊录用</font>
-                    </a>)【毫米波MIMO通感一体化】
+                        <font>万子维 论文被IEEE TWC (IF=8.346)期刊录用</font>)【毫米波MIMO通感一体化】
+                </li>
+                <li> <b>
+                        <font color="#FF0000">[2022.08]</font>
+                    </b> Ph.D. student Li Qiao visits Imperial College London (
+                    <a href="https://www.imperial.ac.uk/information-processing-and-communications-lab/people/deniz/"
+                        target="_blank">
+                        <font>博士生乔力前往英国帝国理工学院Deniz Gündüz教授组访问交换
+                        </font>
+                    </a>)
                 </li>
 
                 <li> <b>
                         <font color="#FF0000">[2022.08]</font>
                     </b> Minghui Wu, Yifei Zhang, and Yang Wang are awarded Second Prize in the North China Division of
                     the Graduate Electronic Design Competition (
-                    <a href="" target="_blank">
-                        <font>吴铭晖,张翼飞和王洋获得“兆易创新杯”第十七届中国研究生电子设计竞赛华北赛区二等奖</font>
-                    </a>)
+                        <font>吴铭晖,张翼飞和王洋获得“兆易创新杯”第十七届中国研究生电子设计竞赛华北赛区二等奖</font>)
                 </li>
 
                 <li> <b>
@@ -949,7 +952,8 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[48] Y. Wang, <b>Z. Gao</b>, D. Zheng, S. Chen, D. Gunduz, and H. V. Poor, "Transformer-Empowered
+                        <span>[48] Y. Wang, <b>Z. Gao</b>, D. Zheng, S. Chen, D. Gunduz, and H. V. Poor,
+                            "Transformer-Empowered
                             6G Intelligent Networks: From Massive MIMO Processing to Semantic Communication," accepted
                             by IEEE Wireless Communications.
                             [<a href="https://arxiv.org/pdf/2205.03770.pdf" target="_blank">arXiv</a>]
@@ -958,7 +962,8 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[47] <b>Z. Gao</b>, X. Zhou, J. Zhao, J. Li, C. Zhu, C. Hu, P. Xiao, S. Chatzinotas, D. W. K. Ng,
+                        <span>[47] <b>Z. Gao</b>, X. Zhou, J. Zhao, J. Li, C. Zhu, C. Hu, P. Xiao, S. Chatzinotas, D. W.
+                            K. Ng,
                             B. Ottersten, "Grant-Free NOMA-OTFS Paradigm: Enabling Efficient Ubiquitous Access for LEO
                             Satellite Internet-of-Things", accepted by IEEE Network, arXiv:2209.12159.
                             [<a href="https://arxiv.org/abs/2209.12159" target="_blank">arXiv</a>]
@@ -967,7 +972,8 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[46] M. Wu, <b>Z. Gao</b>, Y. Huang, Z. Xiao, D. W. K. Ng, and Z. Zhang, "Deep Learning-Based
+                        <span>[46] M. Wu, <b>Z. Gao</b>, Y. Huang, Z. Xiao, D. W. K. Ng, and Z. Zhang, "Deep
+                            Learning-Based
                             Rate-Splitting Multiple Access for Reconfigurable Intelligent Surface-Aided Tera-Hertz
                             Massive MIMO", accepted by IEEE Journal on Selected Areas in Communications
                             [<a href="https://arxiv.org/abs/2209.08456" target="_blank">arXiv</a>]
