--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
                 <li> <b>
                         <font color="#FF0000">[2022.09]</font>
                     </b> One Paper was accepted by IEEE Trans. Vehicular Technology (
-                        <font>IF = 6.239</font>)【毫米波太赫兹MIMO超级上行接入】
+                    <font>IF = 6.239</font>)【毫米波太赫兹MIMO超级上行接入】
                 </li>
 
                 <li> <b>
                         <font color="#FF0000">[2022.09]</font>
                     </b> Paper of Ziwei Wan was accepted by IEEE Trans. Wireless Communications (
-                        <font>万子维 论文被IEEE TWC (IF=8.346)期刊录用</font>)【毫米波MIMO通感一体化】
+                    <font>万子维 论文被IEEE TWC (IF=8.346)期刊录用</font>)【毫米波MIMO通感一体化】
                 </li>
                 <li> <b>
                         <font color="#FF0000">[2022.08]</font>
@@ -164,7 +164,7 @@
                         <font color="#FF0000">[2022.08]</font>
                     </b> Minghui Wu, Yifei Zhang, and Yang Wang are awarded Second Prize in the North China Division of
                     the Graduate Electronic Design Competition (
-                        <font>吴铭晖,张翼飞和王洋获得“兆易创新杯”第十七届中国研究生电子设计竞赛华北赛区二等奖</font>)
+                    <font>吴铭晖,张翼飞和王洋获得“兆易创新杯”第十七届中国研究生电子设计竞赛华北赛区二等奖</font>)
                 </li>
 
                 <li> <b>
@@ -942,6 +942,15 @@
                             [<a href="https://ieeexplore.ieee.org/document/9891773/" target="_blank">IEEE URL</a>]
                         </span>
                     </p> -->
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[50] Xinyu Zhu, Yang Huang, Shaoyu Wang, Qihui Wu, Xiaohu Ge, Yuan Liu, <b>Zhen Gao</b>, "Dynamic
+                            Spectrum Anti-Jamming with Reinforcement Learning Based on Value Function Approximation," in
+                            IEEE Wireless Communications Letters 2023.
+                            <!-- [<a href="https://arxiv.org/abs/2301.06055" target="_blank">arXiv</a>] -->
+                            [<a href="https://ieeexplore.ieee.org/document/9978681" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
+
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[49] J. Zhao, Y. Zhu, K. Cai, <b>Z. Gao</b>, Z. Han and L. Hanzo, "Multiple-Antenna Aided
                             Aeronautical Communications in Air-Ground Integrated Networks: Channel Estimation, Reliable
