--- a/index.html
+++ b/index.html
@@ -482,6 +482,28 @@
                         </div>
                     </div>
 
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseFifteen">
+                                    <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to
+                                        unfold/fold video.</i>
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseFifteen" class="panel-collapse collapse">
+                            <div class="panel-body" style="position: relative; padding: 30% 45%;">
+                                <iframe
+                                    src="//player.bilibili.com/player.html?aid=477568084&bvid=BV1pK41117r6&cid=959198558&page=1&as_wide=1&high_quality=1&danmaku="
+                                    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
+                                    style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
+                                </iframe>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- <iframe src="//player.bilibili.com/player.html?aid=477568084&bvid=BV1pK41117r6&cid=959198558&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe> -->
+
                     <details>
                         <summary>Related Work</summary>
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
@@ -967,6 +989,7 @@
                             by IEEE Wireless Communications.
                             [<a href="https://arxiv.org/pdf/2205.03770.pdf" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/9961131" target="_blank">IEEE URL</a>]
+                            [<a href="https://www.bilibili.com/video/BV1pK41117r6" target="_blank">Tutorial Link</a>]
                         </span>
                     </p>
 
