--- a/index.html
+++ b/index.html
@@ -1221,9 +1221,9 @@
                             Domains?," in IEEE Communications Magazine, vol. 59, no. 7, pp. 30-36, July 2021.
                             (<b>SCI Q1 Top, IF=9.619</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9502642" target="_blank">URL</a>]
-                            [<a href="leodemo.html" target="_blank">
+                            <!-- [<a href="leodemo.html" target="_blank">
                                 <font color="#FF0000">LEO Satellite Demo</font>
-                            </a>]
+                            </a>] -->
                         </span>
 
                     </p>
