--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
                             Rate-Splitting Multiple Access for Reconfigurable Intelligent Surface-Aided Tera-Hertz
                             Massive MIMO", accepted by IEEE Journal on Selected Areas in Communications
                             [<a href="https://arxiv.org/abs/2209.08456" target="_blank">arXiv</a>]
-                            <!-- [<a href="https://ieeexplore.ieee.org/document/9891773/" target="_blank">IEEE URL</a>] -->
+                            [<a href="https://ieeexplore.ieee.org/document/10032139" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
 
